<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanenet_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="you@example.com">yvxaiver</maintainer>
  <license>TODO: License declaration</license>
  
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>points_vector</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
